--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ Thumbs.db
 .env
 .env.local
 node_modules/
+/PortalGartran.Client/publish
+/PortalGartran.Server/Properties/PublishProfiles
+/PortalGartran.Server/publish
+/publish
